# my_mcp_servers

./: .gitignore
conversations/: README.md  pyproject.toml
conversations/src/conversations/: __init__.py  server.py
conversations/tests/: test_server.py
countries_currencies_mcp/: pyproject.toml
countries_currencies_mcp/src/countries_currencies/: __init__.py  server.py
countries_currencies_mcp/src/countries_currencies_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
current_date_time/: README.md  pyproject.toml
current_date_time/src/current_date_time/: __init__.py  server.py
current_date_time/src/current_date_time_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
markdown_to_pdf/: README.md  pyproject.toml
markdown_to_pdf/src/markdown_to_pdf/: __init__.py  server.py
markdown_to_pdf/tests/: test_formatting.py  test_markdown_blocks.py
math_and_logic/: README.md  pyproject.toml
math_and_logic/src/math_and_logic/: __init__.py  server.py
news_mcp/: README.md  pyproject.toml
news_mcp/src/news_mcp/: __init__.py  server.py
sqlite_read_server/: README.md  pyproject.toml
sqlite_read_server/src/sqlite_read_server/: __init__.py  server.py
weather_geocoding/: pyproject.toml
weather_geocoding/src/weather_geocoding/: __init__.py  server.py
weather_geocoding/src/weather_geocoding_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wikipedia_mcp/: README.md  pyproject.toml
wikipedia_mcp/src/wikipedia_mcp.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
yfin/: README.md  example_yfin.py  pyproject.toml
(+3 files in other folders)
